# turbossh

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
examples/: examples.py  pyqt5_demo.py
scripts/: README.md  build_exe.py  gui_entry.py  release.py
tests/: test_offline.py
turbossh/: README.md  __init__.py  __main__.py  cli.py  config.py  core.py  credentials.py  exceptions.py  ftp.py  pool.py  results.py  serial_handler.py  setup_openssh_server.ps1  tunnel.py  winrm_bootstrap.py
turbossh/gui/: __init__.py  __main__.py  app.py  camera_widget.py  connection_panel.py  ffmpeg_tools.py  home_tab.py  log_panel.py  logs_tab.py  main_window.py  session_dialog.py  session_widgets.py  sessions.py  settings.py  settings_dialog.py  sftp_browser.py  terminal.py  theme.py  updater.py  vt100.py  widgets.py  worker.py
turbossh/gui/tabs/: __init__.py  command_tab.py  files_tab.py  serial_tab.py  stream_tab.py
